--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <li class="dropdown messages-menu">
               <!-- Menu toggle button -->
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                <i class="fa fa-envelope-o"></i>
+                <i class="fa fa-group"></i>
                 <span class="label label-success">32</span>
               </a>
               <ul class="dropdown-menu">
@@ -125,7 +125,7 @@
             <li class="dropdown tasks-menu">
               <!-- Menu Toggle Button -->
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                <i class="fa fa-flag-o"></i>
+                <i class="fa  fa-newspaper-o"></i>
                 <span class="label label-danger">2</span>
               </a>
               <ul class="dropdown-menu">
@@ -135,7 +135,7 @@
                   <ul class="menu">
                     <li><!-- Task item -->
                       <a href="#">
-                        <!-- Task title and progress text -->
+                        <!-- Task title and progress te fa-newspaper-oxt -->
                         <h3>
                           Water crisis in china
                           <small class="pull-right">2 days</small>
