fixing page title

--- a/publish.html
+++ b/publish.html
@@ -262,7 +262,7 @@
             </div>
             <!-- /.col -->
             <div class="col-md-9">
-              <div class="box box-danger">
+              <div class="box">
                 <div class="box-header with-border">
                   <h3 class="box-title">Write a new article</h3>
                 </div>
